# suturo_perception

./: .gitignore  CMakeLists.txt  CaffeConfig.cmake  README.md  TUTORIALS.md  cmake_install.cmake  package.xml  workspace.rosinstall
Openni2/: Create_openni2_ws  Openni_Install.txt  README.md  Save_Image_tutorial.txt
TODO/Openni2/: Openni2_Install  README.md
TODO/classificationEvaluation/: package.xml
TODO/clusterLabeling/labeling/: table_view_1_labeling.json
TODO/clusterLabeling/src/gui/: guiWrapper.h  ui_mainwindow.h
TODO/featureExtraction/extractedFeats/extractedFeatsGazeboSimObjects/: BVLC_REF_ClassLabel_gazebo_sim_objects.txt
TODO/featureExtraction/splits/: split_list_gazebo_sim_objects.yaml
TODO/simulation_recording/launch/: hsrb_recording_world.launch
actionserver/: CMakeLists.txt  README.md  package.xml
actionserver/descriptors/typesystem/: all_types.xml
actionserver/include/actionserver/types/: all_types.h  type_definitions.h
actionserver/src/: ExtractObectInfoInRegionServer.cpp  ExtractObjectInfoClient.cpp  ExtractObjectInfoInRegionClient.cpp  ExtractObjectInfoServer.cpp  ExtractPlaneInfoClient.cpp  ExtractPlaneInfoServer.cpp  PerceptionServer.cpp  perception_client.cpp  perception_server.cpp  test
actionserver/src/include/actionserver/: PerceptionServer.h
classificationEvaluation/: CMakeLists.txt  evaluation.md
classificationEvaluation/scripts/: rsClassificationEvaluator.py
clusterLabeling/: CMakeLists.txt  package.xml
clusterLabeling/descriptors/annotators/: classificationEvaluationAnnotator.yaml  clusterLabeler.yaml
clusterLabeling/descriptors/typesystem/: all_types.xml
clusterLabeling/include/clusterLabeling/types/: all_types.h  type_definitions.h
clusterLabeling/src/annotators/: classificationEvaluationAnnotator.cpp  clusterLabeler.cpp
clusterLabeling/src/gui/: guiWrapper.cpp  guiWrapper.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
config/: config_demo.ini  config_hsrb.ini  config_hsrb_mongo.ini  suturo_semantic_map.yaml  suturo_semantic_map_drawers.yaml
config_recording/: CollectionReader.yaml  README.md  StorageWriter.yaml  config_mongo_hsrb.ini  demo.yaml  storage.yaml
descriptors/analysis_engines/: demo_from_storage.yaml  hsrb.yaml  hsrb_1ms.yaml  hsrb_drawers.yaml  hsrb_planes.yaml  hsrb_table.yaml  suturo_demo.yaml
descriptors/annotators/: DrawerSurfaceAnnotator.yaml  RegionAnnotator.yaml  SuturoClassifier.yaml  SuturoRegionFilter.yaml  SuturoShapeAnnotator.yaml
descriptors/annotators/filter/: HSR_PointCloudFilter.yaml
descriptors/typesystem/: all_types.xml  property_types.xml
featureExtraction/: featureExtraction.md  split.yaml
featureExtraction/extractedFeats/extractedFeatsSelfScannedSix/: BVLC_REF_ClassLabel_self_scanned_six_split.txt
featureExtraction/splits/: gazebo_sim_objects.yaml  odu_iai_full_split.yaml  self_scanned_six_split.yaml
featureExtraction/tools/: make_split_from_directory.sh
include/suturo_perception/: PerceptionServer.h  SuturoProcessManager.h  suturo_conversion.h
include/suturo_perception/types/: all_types.h  property_types.h  type_definitions.h
launch/: hsrb_perception.launch
rs_perception/: CMakeLists.txt  package.xml
rs_perception/cmake/: rs_perception_config.cmake
rs_perception/config/: config_hsrb.ini  config_hsrb_robot.ini  hsrb.yaml
rs_perception/descriptors/analysis_engines/: classificationEval.yaml  demo_from_storage.yaml  hsr_demo.yaml  hsrb_1ms.yaml  hsrb_planes.yaml  storage_suturo.yaml
rs_perception/descriptors/annotators/: SuturoShapeAnnotator.yaml
rs_perception/descriptors/annotators/io/: CollectionReaderSuturo.yaml  StorageWriterSuturo.yaml
rs_perception/descriptors/typesystem/: all_types.xml
rs_perception/include/rs_perception/types/: all_types.h  type_definitions.h
rs_perception/launch/: hsr_demo_perception.launch  hsrb_perception.launch
rs_perception/script/: hermes_planning.py  manipulationdemo.py  region_filter_setup.py  semantic_map.yaml  simulation_region_filter_setup.py  sub.py
rs_perception/src/: SuturoShapeAnnotator.cpp
script/: region_filter_setup.py  simulation_region_filter_setup.py
script/Feature Extraction/: make_split_list_from_directory.sh
script/RegionFilter/: region_filter_yaml_creator.py  setup_pipeline.py
simulation_recording/: CMakeLists.txt  package.xml
src/: DrawerSurfaceAnnotator.cpp
src/annotators/: RegionAnnotator.cpp  SaveClusterCloudsAndImages.cpp  SuturoClassifier.cpp  SuturoRegionFilter.cpp  SuturoShapeAnnotator.cpp  clusterLabeler.cpp
src/server/: ExtractDrawerInfoServer.cpp  ExtractObjectInfoClient.cpp  ExtractObjectInfoServer.cpp  ExtractPlaneInfoClient.cpp  ExtractPlaneInfoServer.cpp  ExtractTableInfoServer.cpp  PerceptionServer.cpp  perception_server.cpp
src/utils/: SuturoProcessManager.cpp  suturo_conversion.cpp
suturo_perception_msgs/action/: ExtractObjectInfo.action
suturo_perception_msgs/msg/: ObjectDetectionData.msg  TestMsg.msg
